# kraken

./: .buildinfo  .gitignore  .travis.yml  AGENTS.md  AUTHORS  CITATION.cff  CNAME  ChangeLog  MANIFEST.in  README  README.md  README.rst  advanced.html  api.html  clstm2js.py  environment.yml  environment_cuda.yml  environment_rioc.yml  genindex.html  index.html  ketos.html  lrpred  models.html  objects.inv  params.json  pre-requirements.txt  py-modindex.html  pyproject.toml  pyrnn2clstm.py  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: test  test.yml
2.0.0/: .buildinfo  advanced.html  api.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js  training.html  vgsl.html
2.0.0/.doctrees/: advanced.doctree  api.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  models.doctree  training.doctree  vgsl.doctree
2.0.0/_sources/: advanced.rst.txt  api.rst.txt  training.rst.txt  vgsl.rst.txt
3.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js  training.html  vgsl.html
3.0/.doctrees/: advanced.doctree  api.doctree  api_docs.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  models.doctree  training.doctree  vgsl.doctree
3.0/_sources/: advanced.rst.txt  api.rst.txt  api_docs.rst.txt  ketos.rst.txt  models.rst.txt  training.rst.txt
3.0/_static/: sample_metadata.md
4.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
4.0/.doctrees/: advanced.doctree  api.doctree  api_docs.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  models.doctree  training.doctree  vgsl.doctree
4.0/_sources/: api.rst.txt  api_docs.rst.txt  index.rst.txt
4.1/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
4.1/.doctrees/: advanced.doctree  api.doctree  api_docs.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  models.doctree  training.doctree  vgsl.doctree
4.1/_sources/: advanced.rst.txt  ketos.rst.txt
4.2.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
4.2.0/.doctrees/: advanced.doctree  api.doctree  api_docs.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  models.doctree  training.doctree  vgsl.doctree
4.2.0/_sources/: ketos.rst.txt  training.rst.txt  vgsl.rst.txt
4.2.0/_static/: pagexml.xml
4.3.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
4.3.0/.doctrees/: advanced.doctree  api.doctree  api_docs.doctree  environment.pickle  gpu.doctree  index.doctree  ketos.doctree  (+3 more)
5.0.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
5.1/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  search.html  searchindex.js  training.html  vgsl.html
5.2/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  search.html  searchindex.js  training.html  vgsl.html
5.3.0/: .buildinfo  advanced.html  api.html  api_docs.html  genindex.html  gpu.html  index.html  ketos.html  models.html  objects.inv  search.html  searchindex.js  training.html  vgsl.html
6.0.0/: .buildinfo  api_docs.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
7.0/: .buildinfo  changelog.html  genindex.html  getting_started.html  index.html  introduction_to_atr.html  py-modindex.html  search.html  searchindex.js
_sources/: advanced.txt  api.txt  index.txt  models.txt
conda/: build.sh  conda_build_config.yaml  conda_upload.sh  meta.yaml  recipe.yaml
docs/: Makefile  advanced.rst  alto.xml  api.rst  api_docs.rst  conf.py  getting_started.rst  gpu.rst  index.rst  introduction_to_atr.rst  ketos.rst  make.bat  models.rst  redirect.html  training.rst  vgsl.rst
examples/: kraken_text_segmenter_example.py
experiments/: baselineset_overlay.py  heatmap_overlay.py  recognition.yaml  segmentation.yaml  test_rec.yaml
kraken/: __init__.py  align.py  binarization.py  blla.py  containers.py  html.py  iso15924.json  ketos.py  kraken.py  linegen.py  linevis.py  metadata.schema.json  pageseg.py  pyrnn_pb2.py  registry.py  repo.py  rpred.py  script.clstm  serialization.py  testim.tif  train.py  transcrib.py  transcribe.py  transcription.html
krakenOCR/: kraken_ocr.py
main/: .buildinfo  advanced.html  api.html  api_docs.html  changelog.html  genindex.html  getting_started.html  gpu.html  index.html  introduction_to_atr.html  ketos.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js  training.html  vgsl.html
notes/: windows-baseline.md
ocr/: kraken_ocr.py
ocrolib/: common.py  lstm.py  psegutils.py
proto/: pyrnn.proto
singularity/: kraken.def
tests/: helpers.py  test_align.py  test_arrow_dataset.py  test_binarization.py  test_cli.py  test_codec.py  test_container.py  test_dataset.py  test_html.py  test_ketos_arch.py  test_ketos_training.py  test_layers.py  test_lineest.py  test_loaders.py  test_merging.py  test_models.py  test_newpolygons.py  test_pageseg.py  test_platform_windows.py  test_plugins.py  test_readingorder.py  test_repo.py  test_rpred.py  test_segmentation_metrics.py  test_serialization.py  test_tasks.py  test_train.py  test_train_utils.py  test_training_smoke.py  test_transcribe.py  test_vgsl.py  test_writers.py  test_xml.py
(+441 files in other folders)
