[metadata]
name = kraken
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = OCR/HTR engine for all the languages
home_page = https://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
	Environment :: GPU
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Scientific/Engineering :: Image Recognition
	Topic :: Scientific/Engineering :: Artificial Intelligence

keywords =
    ocr
    htr

[files]
packages = kraken

[entry_points]
console_scripts =
  kraken = kraken.kraken:cli
  ketos = kraken.ketos:cli
kraken.cli =
  binarize = kraken.kraken:binarize
  segment = kraken.kraken:segment
  ocr = kraken.kraken:ocr
  show = kraken.kraken:show
  list = kraken.kraken:list_models
  get = kraken.kraken:get
ketos.cli = 
  compile = kraken.ketos.dataset:compile
  pretrain = kraken.ketos.pretrain:pretrain
  train = kraken.ketos.recognition:train
  test = kraken.ketos.recognition:test
  publish = kraken.ketos.repo:publish
  rotrain = kraken.ketos.ro:rotrain
  roadd = kraken.ketos.ro:roadd
  segtrain = kraken.ketos.segmentation:segtrain
  segtest = kraken.ketos.segmentation:segtest
  convert = kraken.ketos.weights:convert
kraken.models = 
  TorchVGSLModel = kraken.lib.vgsl:TorchVGSLModel
  Wav2Vec2Mask = kraken.lib.pretrain.Wav2Vec2Mask
  ROMLP = kraken.lib.ro:ROMLP
kraken.lightning_modules =
  blla = kraken.train:BLLASegmentationModel
  crnn = kraken.train:CRNNRecognitionModel
  pretrain = kraken.lib.pretrain:RecognitionPretrainModel
  ro = kraken.lib.ro:ROModel
kraken.loaders =
  safetensors = kraken.models:load_safetensors 
  coreml = kraken.models:load_coreml
kraken.writers =
  safetensors = kraken.models:write_safetensors 
  coreml = kraken.models:write_coreml
kraken.tasks =
  segmentation = kraken.tasks:SegmentationTaskModel
  recognition = kraken.tasks:RecognitionTaskModel
  alignment = kraken.tasks:ForcedAlignmentTaskModel

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.10,<3.14
install_requires =
    jsonschema
    lxml
    requests
    click>=8.1,<8.3
    numpy~=2.0.0
    Pillow>=9.2.0
    regex
    scipy~=1.13.0
    protobuf>=3.0.0
    coremltools~=8.1
    jinja2~=3.0
    python-bidi~=0.6.0
    torchvision>=0.5.0
    torch>=2.4.0,<=2.9
    scikit-learn~=1.5.0
    scikit-image~=0.24.0
    shapely>=2.0.6,~=2.0.6
    pyarrow
    htrmopo>=0.3,~=0.3
    lightning~=2.4.0
    torchmetrics>=1.1.0
    threadpoolctl~=3.5.0
    platformdirs
    rich<14.1.0
    safetensors
    iso639-lang
    packaging

[options.extras_require]
test = hocr-spec; pytest
pdf = pyvips
augment = albumentations
